version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Mechanical/Application/SolveProcessSettings/QueueSettings.rst.txt
.. vale off



:class:`QueueSettings`
======================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Mechanical.Application.SolveProcessSettings.QueueSettings

   Bases: :py:obj:`object`


   
   The class representing queue settings.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: QueueSettings

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~CopyTo`
            - CopyTo method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~DCSPassword`
            - DCSPassword property.
          * - :py:attr:`~DCSUrl`
            - DCSUrl property.
          * - :py:attr:`~DCSUsername`
            - DCSUsername property.
          * - :py:attr:`~JobName`
            - The job name of the queue settings.
          * - :py:attr:`~License`
            - The license of the queue settings.  The setter will throw an exception if the given license is not valid.
          * - :py:attr:`~Licenses`
            - Licenses property.
          * - :py:attr:`~Name`
            - The name of the queue settings.
          * - :py:attr:`~SolutionExecutionTarget`
            - SolutionExecutionTarget property.







Property detail
---------------
.. py:property:: DCSPassword
   :type: Optional[str]


   
   DCSPassword property.
















   ..
       !! processed by numpydoc !!

.. py:property:: DCSUrl
   :type: Optional[str]


   
   DCSUrl property.
















   ..
       !! processed by numpydoc !!

.. py:property:: DCSUsername
   :type: Optional[str]


   
   DCSUsername property.
















   ..
       !! processed by numpydoc !!

.. py:property:: JobName
   :type: Optional[str]


   
   The job name of the queue settings.
















   ..
       !! processed by numpydoc !!

.. py:property:: License
   :type: Optional[str]


   
   The license of the queue settings.  The setter will throw an exception if the given license is not valid.
















   ..
       !! processed by numpydoc !!

.. py:property:: Licenses
   :type: Optional[Iterable[str]]


   
   Licenses property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   The name of the queue settings.
















   ..
       !! processed by numpydoc !!

.. py:property:: SolutionExecutionTarget
   :type: Optional[str]


   
   SolutionExecutionTarget property.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: CopyTo(other: Ansys.ACT.Mechanical.Application.SolveProcessSettings.IQueueSettings) -> None

   
   CopyTo method.

   ..
       !! processed by numpydoc !!



.. vale on